unpackaged/objects/copadoconnect__Additional_Parameter__c.object
<CustomObject>
	<customSettingsType>List</customSettingsType>
	<description>Custom setting will make connection b/w integration configuration and additional parameter for e.g. Jira Board</description>
	<fields>
		<fullName>copadoconnect__Copado_Integration_ID__c</fullName>
		<label>Copado Integration ID</label>
		<length>18</length>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>copadoconnect__Key__c</fullName>
		<label>Key</label>
		<length>255</length>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>copadoconnect__Value__c</fullName>
		<label>Value</label>
		<length>255</length>
		<type>Text</type>
	</fields>
	<label>Additional Parameter</label>
</CustomObject>